--- a/website/i18n/ru.json
+++ b/website/i18n/ru.json
@@ -4,8 +4,8 @@
 
 
   "Documents": "Документи",
-    "next": "Следующая",
-    "previous": "Предыдущая",
+    "next": "Вперед",
+    "previous": "Назад",
     "tagline": "Вперед",
     "docs": {
       "dispatcher": {
