--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -12,7 +12,7 @@
         "title": "ApplePayWeb"
       },
       "dictionary": {
-        "title": "dictionary"
+        "title": "Dictionary"
       },
       "dispatcher": {
         "title": "Specification for the interaction of the merchant with the Dispatcher software."
@@ -20,16 +20,16 @@
       "GooglePay": {
         "title": "GooglePay"
       },
-      "version-1.0.0-ApplePayApp": {
+      "version-1.0.0/version-1.0.0-ApplePayApp": {
         "title": "App"
       },
-      "version-1.0.0-ApplePayWeb": {
-        "title": "yWeb"
+      "version-1.0.0/version-1.0.0-ApplePayWeb": {
+        "title": "Web"
       },
-      "version-1.0.0-dictionary": {
+      "version-1.0.0/version-1.0.0-dictionary": {
         "title": "Dictionary"
       },
-      "version-1.0.0-dispatcher": {
+      "version-1.0.0/version-1.0.0-dispatcher": {
         "title": "Specification for the interaction of the merchant with the Dispatcher software."
       },
       "version-1.0.0/version-1.0.0-GooglePay": {
